[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/GUI elements/character_sheet/CharacterSheet.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GUI elements/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://scenes/GUI elements/game_over_panel/GameOverPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/GUI elements/class_picker/ClassPicker.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GUI elements/inventory_sheet/InventorySheet.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GUI elements/minimap/Minimap.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/munro.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ClassPicker" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Minimap" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CharacterSheet" parent="." instance=ExtResource( 1 )]
visible = false

[node name="InventorySheet" parent="." instance=ExtResource( 5 )]
visible = false

[node name="GameOverPanel" parent="." instance=ExtResource( 3 )]
visible = false

[node name="LevelLabel" type="Label" parent="."]
visible = false
margin_left = 768.0
margin_right = 1000.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.8, 0.745098, 0.439216, 1 )
text = "LEVEL : 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
